--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "dependencies": {
     "axios": "^1.6.1",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "react-router-dom": "^6.18.0"
+  },
+  "scripts": {
+    "start": "concurrently \"cd my-project && npm run dev\" \"node server/server.js\"",
+    "dev:vite": "vite",
+    "dev:server": "node server/server.js",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   }
 }
