--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "concurrently \"cd my-project && npm run dev\" \"node server/server.js\"",
     "dev:vite": "vite",
     "dev:server": "node server/server.js",
-    "build": "vite build",
+    "build": "cd server && npm install ",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   }
