--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "concurrently \"cd my-project && npm run dev\" \"node server/server.js\"",
     "build": "npm run client && npm run server",
     "server": "cd server && npm install",
-    "client": "cd my-project && npm run build && npm install",
+    "client": "cd my-project && npm install &&npm run build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   }
 }
