--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-router-dom": "^6.18.0"
   },
   "scripts": {
-    "start": "concurrently \"cd my-project && npm run dev\" \"node server/server.js\"",
+    "start": "npm run client-run && npm run server-run",
+    "client-run": "cd my-project && npm run dev",
+    "server-run": "node server/server.js",
     "build": "npm run client && npm run server",
     "server": "cd server && npm install",
     "client": "cd my-project && npm install &&npm run build",
