--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-router-dom": "^6.18.0"
   },
   "scripts": {
-    "start": "npm run client-run && npm run server-run",
+    "start": "npm run server-run && npm run client-run  ",
     "client-run": "cd my-project && npm run dev",
     "server-run": "node server/server.js",
     "build": "npm run client && npm run server",
